Add support for TimeStat and Distribution resets